<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/list_item"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:layout_margin="2dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_weight="1"
        android:padding="@dimen/dp4"
        android:src="@drawable/atatork" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/dp8"
        android:paddingLeft="@dimen/dp8"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:ellipsize="marquee"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/title_text"
            android:text="@string/title"
            android:singleLine="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description__text"
            android:paddingRight="@dimen/dp8"
            android:textSize="16sp"
            android:text="@string/description"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:id="@+id/location">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/maps_location_icon"
                android:layout_marginEnd="4dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_text"
                android:textSize="16sp"
                android:text="@string/location"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/time">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/time"
                android:layout_marginEnd="4dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_text"
                android:textSize="16sp"
                android:text="@string/time"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:id="@+id/money">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/phone"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/phone_text"
                android:text="@string/phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/phone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>